<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    >

    <RelativeLayout
        android:layout_width="1035dp"
        android:layout_height="520dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_general_bg_blue_canvas_with_edge"
        android:clickable="true">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/dp32"
            android:background="@drawable/button_effect_close_style_blue_white"
            />

        <com.zealens.face.view.FontTextView
            android:id="@+id/description"
            style="@style/BaseText.Format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp38"
            android:layout_marginTop="@dimen/dp58"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/last_score_incorrect_with_quote"
            android:textSize="@dimen/sp50"
            />

        <View
            android:id="@id/center_dock"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp270"
            android:layout_below="@id/description"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_toStartOf="@id/center_dock"
            android:background="@drawable/match_score_board_video_replay"
            >

            <View
                android:id="@id/center_dock"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />

            <com.zealens.face.view.FontTextView
                style="@style/BaseText.Format.NoPadding.Size30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp44"
                android:layout_toEndOf="@id/center_dock"
                android:text="@string/replay_video"
                android:textSize="@dimen/sp40"/>

            <com.zealens.face.view.FontTextView
                android:id="@+id/replay_side_a"
                style="@style/BaseText.Format.NoPadding.Size30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/center_dock"
                android:layout_toStartOf="@id/center_dock"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/replay_side_a"
                android:textColor="@color/color65C200"
                android:background="@drawable/button_effect_white"
                />

            <com.zealens.face.view.FontTextView
                android:id="@+id/replay_side_b"
                style="@style/BaseText.Format.NoPadding.Size30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/center_dock"
                android:layout_toEndOf="@id/center_dock"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/replay_side_b"
                android:textColor="@color/color65C200"
                android:background="@drawable/button_effect_white"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/description"
            android:layout_toEndOf="@+id/center_dock"
            android:orientation="vertical"
            >

            <!--add the parent for the bg shadow effect taking string space-->
            <FrameLayout
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect_blue_with_shadow">

                <com.zealens.face.view.FontTextView
                    android:id="@+id/no_text"
                    style="@style/BaseText.Format.Disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp25"
                    android:text="@string/correct_score"
                    android:textSize="@dimen/sp40"/>
            </FrameLayout>

            <!--add the parent for the bg shadow effect taking string space-->
            <FrameLayout
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect_blue_with_shadow">

                <com.zealens.face.view.FontTextView
                    android:id="@+id/yes_text"
                    style="@style/BaseText.Format.Disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp25"
                    android:text="@string/competitor_won_the_score"
                    android:textSize="@dimen/sp40"/>
            </FrameLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>