<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    >

    <RelativeLayout
        android:layout_width="835dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_general_bg_blue_canvas_with_edge"
        android:clickable="true">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/dp32"
            android:background="@drawable/button_effect_close_style_blue_white"
            />

        <com.zealens.face.view.FontTextView
            android:id="@+id/description"
            style="@style/BaseText.Format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp88"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/confirm_to_log_out_all_accounts"
            android:textSize="@dimen/sp50"
            />

        <View
            android:id="@+id/center_dock"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <!--add the parent for the bg shadow effect taking string space-->
        <FrameLayout
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp40"
            android:layout_toStartOf="@+id/center_dock"
            android:background="@drawable/button_effect_blue_with_shadow">

            <com.zealens.face.view.FontTextView
                android:id="@+id/no_text"
                style="@style/BaseText.Format.Disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp19"
                android:text="@string/no"
                android:textSize="@dimen/sp40"/>
        </FrameLayout>

        <!--add the parent for the bg shadow effect taking string space-->
        <FrameLayout
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp40"
            android:layout_toEndOf="@+id/center_dock"
            android:background="@drawable/button_effect_blue_with_shadow">

            <com.zealens.face.view.FontTextView
                android:id="@+id/yes_text"
                style="@style/BaseText.Format.Disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp40"
                android:layout_marginTop="@dimen/dp19"
                android:text="@string/exit"
                android:textSize="@dimen/sp40"/>
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>