<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:paddingBottom="@dimen/dp100"
    android:paddingLeft="@dimen/dp100"
    android:paddingRight="@dimen/dp100"
    android:paddingTop="@dimen/dp100"
    >

    <!--do not remove this layer, it affect the edge effect-->
    <FrameLayout
        android:layout_width="420dp"
        android:layout_height="650dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp10"
            android:background="@color/colorLoginBg"
            />

        <FrameLayout
            android:id="@+id/network_down_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.zealens.face.view.FontTextView
                style="@style/BaseText.Format.NoPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp10"
                android:drawablePadding="@dimen/dp44"
                android:drawableTop="@drawable/network_down"
                android:text="@string/network_down_hint"
                android:textSize="@dimen/sp20"
                />
        </FrameLayout>

        <WebView
            android:id="@+id/log_in_web_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp10"
            android:visibility="invisible"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp200"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/dp30">

            <com.zealens.face.view.FontTextView
                android:id="@+id/close"
                style="@style/BaseText.Format"
                android:layout_width="224dp"
                android:layout_height="@dimen/dp46"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_selector_gray_round8dp"
                android:gravity="center"
                android:text="@string/close"/>

            <com.zealens.face.view.FontTextView
                android:id="@+id/already_login"
                style="@style/BaseText.Format.NoPadding.Size30"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp100"
                android:layout_above="@id/close"
                android:background="@color/colorLoginBg"
                android:layout_marginBottom="@dimen/dp30"
                android:gravity="center"
                android:text="@string/already_login"
                android:visibility="gone"
                tools:visibility="visible"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_bounds_alpha_center_bg"
            android:clickable="false"
            />

    </FrameLayout>

</RelativeLayout>